<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="cb_music">音乐</string>
    <string name="cb_hobby">爱好:</string>
    <string name="cb_game">游戏</string>
    <string name="cb_trval">旅游</string>
    <string name="cb_fllm">看电影</string>
    <string name="cb_done">完成</string>
    <string name="radiohello">选择你最喜欢的课程：</string>
    <string name="music">音乐</string>
    <string name="gym">体育</string>
    <string name="dance">舞蹈</string>
    <string name="lookBook">看书</string>
</resources>
