<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/radiohello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/radiohello"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@android:color/holo_blue_bright" />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/music"
            android:textSize="16dip" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/gym"
            android:textSize="16dip" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/radiobutton3"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/dance"
            android:textSize="16dip" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/radiobutton4"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/lookBook"
            android:textSize="16dip" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray" />
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:button="@null"
            android:text="@string/lookBook"
            android:drawableRight="@android:drawable/btn_star"
            android:textSize="16dip"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="我最喜欢的课程是"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp" />

</LinearLayout>